# bug-triage-openenv

./: .dockerignore  .gitignore  Dockerfile  PROJECT.md  README.md  TASKS.md  deploy.sh  inference.py  openenv.yaml  pyproject.toml  requirements.txt
bug_triage_env/: __init__.py  baseline.py  client.py  models.py
bug_triage_env/data/: __init__.py  bugs.json
bug_triage_env/graders/: __init__.py  task1_grader.py  task2_grader.py  task3_grader.py
bug_triage_env/server/: __init__.py  app.py  environment.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  NOT_TO_DO.md  PROJECT.md  PROJECT_CONTEXT.md  REWARD_DESIGN.md  ROLES.md  TASKS.md
docs/docs/: 50_OpenEnv_Problem_Statements.md  Creating_and_Publishing_OpenEnv.md  Deploying_OpenEnv.md  Hackathon_FAQ_and_Requirements.md  RL_and_OpenEnv_Concepts.md  Setup_and_Scaling_OpenEnv.md  sample_inference.py
server/: __init__.py  app.py
